--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&display=swap");
 *,
 ::before,
 ::after {
@@ -7,11 +8,6 @@
 }
 
 body {
-  background-color: aliceblue;
-}
-
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
+  background-color: #fff;
+  font-family: "Nunito", sans-serif;
 }
