--- a/style/scss/utilities/_general.scss
+++ b/style/scss/utilities/_general.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&display=swap');
+
 *,
 ::before,
 ::after {
@@ -7,11 +9,13 @@
 }
 
 body {
-  background-color: aliceblue;
+  background-color: #fff;
+  font-family: 'Nunito', sans-serif;
 }
 
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
+// .container {
+//   width: 90%;
+//   max-width: 1200px;
+//   margin: 0 auto;
+//   background-color: aliceblue;
+// }
