--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comforter&family=Lora:wght@400;500;600;700&family=Nunito:wght@200;300;400;500;600;700&display=swap");
 *,
 ::before,
 ::after {
@@ -11,3 +11,14 @@ body {
   background-color: #fff;
   font-family: "Nunito", sans-serif;
 }
+
+header .header__link:hover {
+  color: rgb(20, 114, 191);
+}
+header .header__link--active {
+  color: rgb(20, 114, 191);
+}
+header .header__logo {
+  font-family: "Comforter", cursive;
+  color: rgb(20, 114, 191);
+}/*# sourceMappingURL=style.css.map */
