--- a/style/scss/utilities/_general.scss
+++ b/style/scss/utilities/_general.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&display=swap');
+// @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&display=swap");
+@use "variables";
 
 *,
 ::before,
@@ -10,7 +11,7 @@
 
 body {
   background-color: #fff;
-  font-family: 'Nunito', sans-serif;
+  font-family: variables.$font-general;
 }
 
 // .container {
