page index les 3 sections

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -12,6 +12,13 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
+.saison-topic {
+  background-color: rgb(218, 230, 240);
+}
+.saison-topic__text {
+  font-family: "Lora", serif;
+}
+
 header .header__link:hover {
   color: rgb(20, 114, 191);
 }
