--- a/style/scss/utilities/_variables.scss
+++ b/style/scss/utilities/_variables.scss
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Comforter&family=Lora:wght@400;500;600;700&family=Nunito:wght@200;300;400;500;600;700&display=swap");
 
 $color-blue: rgb(20, 114, 191);
+$color-blue-light: rgb(218, 230, 240);
 
 $font-general: "Nunito", sans-serif;
 $font-accent: "Lora", serif;
