--- a/style/scss/utilities/_general.scss
+++ b/style/scss/utilities/_general.scss
@@ -13,10 +13,10 @@ body {
   background-color: #fff;
   font-family: variables.$font-general;
 }
+.saison-topic {
+  background-color: variables.$color-blue-light;
 
-// .container {
-//   width: 90%;
-//   max-width: 1200px;
-//   margin: 0 auto;
-//   background-color: aliceblue;
-// }
+  &__text {
+    font-family: variables.$font-accent;
+  }
+}
